--- a/index.html
+++ b/index.html
@@ -6,8 +6,77 @@
     <title>BLU Mental Health Support</title>
     <link rel="icon" href="images/clinic.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    
+    <div class="container">
+      <header class="navbar">
+        <a href="#" class="blu">BLU</a>
+        <div class="hamburger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="navbar-lists">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Doctors</a>
+          <a href="#">Services</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="navbar-btns">
+          <button class="login-btn">Log In</button>
+          <button class="signup-btn">Sign Up</button>
+        </div>
+      </header>
+
+      <div class="hero-container">
+        <div class="hero">
+          <div class="hero-mini-container">
+            <h1 class="hero-h1">
+              We Will Help You To Improve Your Mental Health
+            </h1>
+            <p class="hero-p1">
+              We provide support and resources to improve your mental health,
+              offering expert advice, self-care tips, and mindfulness techniques
+              to help you live a balanced, fulfilling life.
+            </p>
+            <div class="hero-btns">
+              <button class="hero-btn1">Get Appointment</button>
+              <button class="hero-btn2">Find Specialist</button>
+            </div>
+          </div>
+          <img class="hero-img" src="images/hero-img.png" alt="Hero Image" />
+        </div>
+      </div>
+    </div>
+
+    <div class="other-sections">
+      <section class="section2">
+        <div class="section2-greens">
+          <h1 class="section2-h1">24/7</h1>
+          <p class="section2-p">Online Support</p>
+        </div>
+        <div class="section2-blacks">
+          <h1 class="section2-h1">100+</h1>
+          <p class="section2-p">Doctors</p>
+        </div>
+        <div class="section2-greens">
+          <h1 class="section2-h1">1M+</h1>
+          <p class="section2-p">Active Patients</p>
+        </div>
+        <div class="section2-blacks">
+          <h1 class="section2-h1">5M+</h1>
+          <p class="section2-p">Interested</p>
+        </div>
+      </section>
+    </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
