--- a/index.html
+++ b/index.html
@@ -75,6 +75,79 @@
           <p class="section2-p">Interested</p>
         </div>
       </section>
+
+      <section class="services">
+        <div class="services-part">
+          <h1 class="services-h1">Our Services</h1>
+          <p class="services-p1">
+            We provide personalized mental health support through expert advice,
+            self-care strategies, mindfulness techniques, and a safe space for
+            you to thrive. Let us help you on your journey to better mental
+            well-being.
+          </p>
+        </div>
+
+        <div class="services-container">
+          <div class="service-card">
+            <img class="service-img" src="images/counseling.png" alt="" />
+            <h1 class="service-title">Counseling</h1>
+            <p class="service-desc">
+              Whether you're dealing with stress, anxiety, or personal
+              struggles, our professional counselors are here to provide
+              guidance, understanding, and coping strategies tailored to your
+              needs.
+            </p>
+          </div>
+          <div class="service-card">
+            <img src="images/support-groups.png" alt="" />
+            <h1 class="service-title">Support Groups</h1>
+            <p class="service-desc">
+              Our support groups provide a safe and supportive environment where
+              you can connect with others facing similar challenges, share
+              experiences and gain insights.
+            </p>
+          </div>
+          <div class="service-card">
+            <img src="images/prescription-medicine.png" alt="" />
+            <h1 class="service-title">Prescription Medicine</h1>
+            <p class="service-desc">
+              We offer professional guidance on prescription medications to help
+              manage mental health conditions. Our healthcare providers work
+              with you to ensure the right treatment plan.
+            </p>
+          </div>
+        </div>
+        <div class="services-container">
+          <div class="service-card">
+            <img class="service-img" src="images/therapies.png" alt="" />
+            <h1 class="service-title">Therapies</h1>
+            <p class="service-desc">
+              Our therapy services include a range of approaches, such as
+              cognitive behavioral therapy (CBT), talk therapy, and
+              mindfulness-based techniques, tailored to help you address
+              emotional challenges.
+            </p>
+          </div>
+          <div class="service-card">
+            <img src="images/brain-stimulation.png" alt="" />
+            <h1 class="service-title">Brain Stimulation</h1>
+            <p class="service-desc">
+              Our brain stimulation services, such as Transcranial Magnetic
+              Stimulation (TMS), offer non-invasive treatments designed to help
+              manage mental health conditions like depression. 
+            </p>
+          </div>
+          <div class="service-card">
+            <img src="images/eye-movement.png" alt="" />
+            <h1 class="service-title">Eye Movement</h1>
+            <p class="service-desc">
+              Our Eye Movement services, including Eye Movement Desensitization
+              and Reprocessing (EMDR), help individuals process traumatic
+              memories and emotional distress. 
+            </p>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="main.js"></script>
