--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p class="service-desc">
               Our brain stimulation services, such as Transcranial Magnetic
               Stimulation (TMS), offer non-invasive treatments designed to help
-              manage mental health conditions like depression. 
+              manage mental health conditions like depression.
             </p>
           </div>
           <div class="service-card">
@@ -143,9 +143,73 @@
             <p class="service-desc">
               Our Eye Movement services, including Eye Movement Desensitization
               and Reprocessing (EMDR), help individuals process traumatic
-              memories and emotional distress. 
+              memories and emotional distress.
             </p>
           </div>
+        </div>
+      </section>
+
+      <section class="appointment-container">
+        <p>Need a doctor's counseling?</p>
+        <h1 class="ap-h1">Just Make An Appointment Here</h1>
+        <button class="ap-btn">Get Appointment</button>
+      </section>
+
+      <section>
+        <div class="clients-part">
+          <h1 class="clients-h1">What Our Clients Say</h1>
+          <p class="clients-p1">
+            Our clients’ feedback is a testament to the positive impact of our
+            services. Here’s what they have to say:
+          </p>
+        </div>
+
+        <div class="clients-container">
+          <button class="arrow left" onclick="changeCard('left')">
+            &#8592;
+          </button>
+          <div class="clients-card">
+            <div class="card">
+              <div class="mini-card">
+                <img
+                  id="photo"
+                  src="images/boy.png"
+                  alt="Profile Picture"
+                />
+                <div>
+                  <h2 id="name">John Doe</h2>
+                  <p id="date">24 May, 2021</p>
+                </div>
+              </div>
+              <p id="stars">★★★★★</p>
+            </div>
+            <p id="writtenReview">
+              The counseling I received has been life-changing. The therapists
+              really took the time to understand my struggles and provided me
+              with practical tools to manage my anxiety. I feel like a
+              completely different person now – more at peace and in control.
+            </p>
+          </div>
+          <!-- <div class="card">
+            <div class="client-info">
+              <img
+                id="photo"
+                src="https://via.placeholder.com/150"
+                alt="Profile Picture"
+              />
+              <div>
+                <h2 id="name">John Doe</h2>
+                <p id="date">24 May, 2021</p>
+              </div>
+              <div id="reviews">
+                <p id="stars">⭐⭐⭐⭐⭐</p>
+              </div>
+            </div>
+            <p id="writtenReview">"Great experience!"</p>
+          </div> -->
+          <button class="arrow right" onclick="changeCard('right')">
+            &#8594;
+          </button>
         </div>
       </section>
     </div>
