--- a/index.html
+++ b/index.html
@@ -171,11 +171,7 @@
           <div class="clients-card">
             <div class="card">
               <div class="mini-card">
-                <img
-                  id="photo"
-                  src="images/boy.png"
-                  alt="Profile Picture"
-                />
+                <img id="photo" src="images/boy.png" alt="Profile Picture" />
                 <div>
                   <h2 id="name">John Doe</h2>
                   <p id="date">24 May, 2021</p>
@@ -190,26 +186,92 @@
               completely different person now – more at peace and in control.
             </p>
           </div>
-          <!-- <div class="card">
-            <div class="client-info">
-              <img
-                id="photo"
-                src="https://via.placeholder.com/150"
-                alt="Profile Picture"
-              />
-              <div>
-                <h2 id="name">John Doe</h2>
-                <p id="date">24 May, 2021</p>
-              </div>
-              <div id="reviews">
-                <p id="stars">⭐⭐⭐⭐⭐</p>
-              </div>
-            </div>
-            <p id="writtenReview">"Great experience!"</p>
-          </div> -->
           <button class="arrow right" onclick="changeCard('right')">
             &#8594;
           </button>
+        </div>
+      </section>
+
+      <section>
+        <div class="why-part">
+          <h1 class="why-h1">Why You Should Take Our Services</h1>
+          <p class="why-p1">
+            Our team of professionals is highly experienced in mental health
+            care, ensuring you receive the best possible support. We tailor our
+            services to meet your unique needs, focusing on what works best for
+            you.
+          </p>
+        </div>
+
+        <div class="why-container">
+          <img class="meeting-img" src="images/meeting.png" alt="" />
+          <div class="why-lists">
+            <div>
+              <div class="why-reasons">
+                <img src="images/line.png" alt="" />
+                <div class="inside-why">
+                  <div class="last-why">
+                    <h3 class="why-h3">Experience</h3>
+                    <img class="correct-img" src="images/correct.png" alt="" />
+                  </div>
+                  <p class="why-p">
+                    With years of expertise in mental health care, our team has
+                    successfully helped individuals overcome challenges and
+                    improve their well-being.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="why-reasons">
+                <img src="images/line.png" alt="" />
+                <div class="inside-why">
+                  <div class="last-why">
+                    <h3 class="why-h3">Commitment</h3>
+                    <img class="correct-img" src="images/correct.png" alt="" />
+                  </div>
+                  <p class="why-p">
+                    We are dedicated to your mental health and well-being. Our
+                    unwavering commitment is to provide personalized care,
+                    reliable support, and effective solutions.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="why-reasons">
+                <img src="images/line.png" alt="" />
+                <div class="inside-why">
+                  <div class="last-why">
+                    <h3 class="why-h3">Facilities</h3>
+                    <img class="correct-img" src="images/correct.png" alt="" />
+                  </div>
+                  <p class="why-p">
+                    Our state-of-the-art facilities are designed to provide a
+                    safe, comfortable, and supportive environment. Equipped with
+                    modern tools and technologies, we offer a range of services.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="why-reasons">
+                <img src="images/line.png" alt="" />
+                <div class="inside-why">
+                  <div class="last-why">
+                    <h3 class="why-h3">Relationships</h3>
+                    <img class="correct-img" src="images/correct.png" alt="" />
+                  </div>
+                  <p class="why-p">
+                    We value building strong, trusting relationships with our
+                    clients. By fostering open communication and genuine
+                    understanding, we create a supportive environment where you
+                    feel heard.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
