--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -314,6 +318,63 @@
         </div>
       </section>
     </div>
+
+    <footer class="footer-container">
+      <div class="footer">
+        <div>
+          <a href="#" class="blu">BLU</a>
+          <p class="footer-p1">
+            Our goal is to empower you with the knowledge and support needed to
+            build resilience, strengthen your mental health, and lead a more
+            fulfilling life.
+          </p>
+          <div class="links">
+            <a href="#" class="social-link">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+        <div>
+          <h3 class="footer-h3">Quick Links</h3>
+          <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Doctors</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+        <div>
+          <h3 class="footer-h3">Services</h3>
+          <div class="footer-links">
+            <a href="#">Vaccination</a>
+            <a href="#">NDD</a>
+            <a href="#">Filled Prescription As Is</a>
+            <a href="#">Patient Referral</a>
+            <a href="#">Other Roofing</a>
+          </div>
+        </div>
+        <div>
+          <h3 class="footer-h3">Location</h3>
+          <p class="footer-p1">
+            Our goal is to empower you with the knowledge and support needed to
+            build resilience, strengthen your mental health, and lead a more
+            fulfilling life.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <p class="footer-p">&copy; 2024 All Rights Reserved</p>
+    </footer>
 
     <script src="main.js"></script>
   </body>
