--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <span></span>
         </div>
         <div class="navbar-lists">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Doctors</a>
-          <a href="#">Services</a>
-          <a href="#">Contact</a>
+          <a href="/index.html">Home</a>
+          <a href="/about.html">About</a>
+          <a href="/doctors.html">Doctors</a>
+          <a href="#our-services">Services</a>
+          <a href="#our-contact">Contact</a>
         </div>
         <div class="navbar-btns">
           <button class="login-btn">Log In</button>
@@ -80,7 +80,7 @@
         </div>
       </section>
 
-      <section class="services">
+      <section id="our-services" class="services">
         <div class="services-part">
           <h1 class="services-h1">Our Services</h1>
           <p class="services-p1">
@@ -153,7 +153,7 @@
         </div>
       </section>
 
-      <section class="appointment-container">
+      <section id="our-contact" class="appointment-container">
         <p>Need a doctor's counseling?</p>
         <h1 class="ap-h1">Just Make An Appointment Here</h1>
         <button class="ap-btn">Get Appointment</button>
@@ -346,11 +346,11 @@
         <div>
           <h3 class="footer-h3">Quick Links</h3>
           <div class="footer-links">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Doctors</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/doctors.html">Doctors</a>
+            <a href="#our-services">Services</a>
+            <a href="#our-contact">Contact</a>
           </div>
         </div>
         <div>
