--- a/doctors.html
+++ b/doctors.html
@@ -30,7 +30,7 @@
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
           <a href="/doctors.html">Doctors</a>
-          <a href="#our-services">Services</a>
+          <a href="index.html#our-services">Services</a>
           <a href="#our-contact">Contact</a>
         </div>
         <div class="navbar-btns">
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/two.png" alt="" />
             <div class="team-details">
               <h1 class="team-name">Alazar Zemene</h1>
               <p class="team-job">PTSD specialist</p>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/three.png" alt="" />
             <div class="team-details">
               <h1 class="team-name">Ahmed Yassin</h1>
               <p class="team-job">Anxiety Specialist</p>
@@ -116,14 +116,13 @@
             </div>
           </div>
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/four.png" alt="" />
             <div class="team-details">
-              <h1 class="team-name">Alan Sultan</h1>
+              <h1 class="team-name">Amanuael Kebede</h1>
               <p class="team-job">General Specialist</p>
               <p class="team-desc">
                 Is a versatile mental health specialist with expertise in
-                treating a range of conditions, including anxiety, depression,
-                and trauma.
+                treating conditions, including anxiety and depression,
               </p>
               <div class="links">
                 <a href="#" class="social-link">
@@ -143,14 +142,13 @@
       <section>
         <div class="team-container">
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/five.png" alt="" />
             <div class="team-details">
-              <h1 class="team-name">Alan Sultan</h1>
-              <p class="team-job">Depression and Social Anxiety</p>
+              <h1 class="team-name">Solomon Getachew</h1>
+              <p class="team-job">Depression & Social Anxiety</p>
               <p class="team-desc">
                 Iis an expert in treating depression and social anxiety, using
-                evidence-based approaches like CBT and mindfulness to help
-                clients regain confidence and emotional stability.
+                evidence-based approaches.
               </p>
               <div class="links">
                 <a href="#" class="social-link">
@@ -166,14 +164,13 @@
             </div>
           </div>
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/six.png" alt="" />
             <div class="team-details">
-              <h1 class="team-name">Alan Sultan</h1>
-              <p class="team-job">Trauma Specialist</p>
+              <h1 class="team-name">Kebede Zemene</h1>
+              <p class="team-job">General Specialist</p>
               <p class="team-desc">
-                Is a compassionate and highly experienced trauma specialist with
-                over a decade of expertise in helping individuals navigate the
-                complexities of trauma recovery.
+                Is a skilled general mental health specialist, experienced in
+                treating conditions, including anxiety and depression.
               </p>
               <div class="links">
                 <a href="#" class="social-link">
@@ -189,14 +186,13 @@
             </div>
           </div>
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/seven.png" alt="" />
             <div class="team-details">
-              <h1 class="team-name">Alan Sultan</h1>
+              <h1 class="team-name">Mohammed Ahmed</h1>
               <p class="team-job">Trauma Specialist</p>
               <p class="team-desc">
                 Is a compassionate and highly experienced trauma specialist with
-                over a decade of expertise in helping individuals navigate the
-                complexities of trauma recovery.
+                over a decade of expertise in helping individuals.
               </p>
               <div class="links">
                 <a href="#" class="social-link">
@@ -212,14 +208,13 @@
             </div>
           </div>
           <div class="team-profile">
-            <img class="team-img" src="images/one.png" alt="" />
+            <img class="team-img" src="images/eight.png" alt="" />
             <div class="team-details">
-              <h1 class="team-name">Alan Sultan</h1>
-              <p class="team-job">Trauma Specialist</p>
+              <h1 class="team-name">Leslie Livingston</h1>
+              <p class="team-job">Anxiety Specialist</p>
               <p class="team-desc">
-                Is a compassionate and highly experienced trauma specialist with
-                over a decade of expertise in helping individuals navigate the
-                complexities of trauma recovery.
+                Is an experienced anxiety specialist, helping clients manage and
+                reduce anxiety using CBT.
               </p>
               <div class="links">
                 <a href="#" class="social-link">
@@ -236,7 +231,109 @@
           </div>
         </div>
       </section>
+
+      <section id="our-contact" class="appointment-container">
+        <p>Need a doctor's counseling?</p>
+        <h1 class="ap-h1">Just Make An Appointment Here</h1>
+        <button class="ap-btn">Get Appointment</button>
+      </section>
+
+      <section>
+        <div class="request-section">
+          <div class="request-left">
+            <p>Need a Doctor's Counseling?</p>
+            <h1>Request a Call Back Now</h1>
+            <p>By filling out this form, you can easily request a call back.</p>
+            <div class="doc-request">
+              <img class="profile-img" src="images/profile.png" alt="" />
+              <p>Our doctors are waiting for your call.</p>
+            </div>
+          </div>
+          <form class="request-right">
+            <input
+              type="text"
+              name="name"
+              placeholder="Your Name"
+              class="input"
+              required
+            />
+            <input
+              type="number"
+              name="phone"
+              placeholder="Your Phone Number"
+              class="input"
+              required
+            />
+            <input
+              type="text"
+              name="date"
+              class="input"
+              placeholder="Date"
+              required
+            />
+            <button type="submit" class="submit-btn">Request Now</button>
+          </form>
+          <div></div>
+        </div>
+      </section>
     </div>
+
+    <footer class="footer-container">
+      <div class="footer">
+        <div>
+          <a href="#" class="blu">BLU</a>
+          <p class="footer-p1">
+            Our goal is to empower you with the knowledge and support needed to
+            build resilience, strengthen your mental health, and lead a more
+            fulfilling life.
+          </p>
+          <div class="links">
+            <a href="#" class="social-link">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="social-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+        <div>
+          <h3 class="footer-h3">Quick Links</h3>
+          <div class="footer-links">
+            <a href="/index.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/doctors.html">Doctors</a>
+            <a href="index.html#our-services">Services</a>
+            <a href="#our-contact">Contact</a>
+          </div>
+        </div>
+        <div>
+          <h3 class="footer-h3">Services</h3>
+          <div class="footer-links">
+            <a href="#">Vaccination</a>
+            <a href="#">NDD</a>
+            <a href="#">Filled Prescription As Is</a>
+            <a href="#">Patient Referral</a>
+            <a href="#">Other Roofing</a>
+          </div>
+        </div>
+        <div>
+          <h3 class="footer-h3">Location</h3>
+          <p class="footer-p1">
+            Our goal is to empower you with the knowledge and support needed to
+            build resilience, strengthen your mental health, and lead a more
+            fulfilling life.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <p class="footer-p">&copy; 2024 All Rights Reserved</p>
+    </footer>
 
     <script src="main.js"></script>
   </body>
