--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
           <a href="/index.html">Home</a>
           <a href="/about.html">About</a>
           <a href="/doctors.html">Doctors</a>
-          <a href="#our-services">Services</a>
+          <a href="index.html#our-services">Services</a>
           <a href="#our-contact">Contact</a>
         </div>
         <div class="navbar-btns">
@@ -196,7 +196,7 @@
             <a href="/index.html">Home</a>
             <a href="/about.html">About</a>
             <a href="/doctors.html">Doctors</a>
-            <a href="#our-services">Services</a>
+            <a href="index.html#our-services">Services</a>
             <a href="#our-contact">Contact</a>
           </div>
         </div>
