--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <span></span>
         </div>
         <div class="navbar-lists">
-          <a href="/index.html">Home</a>
-          <a href="/about.html">About</a>
-          <a href="/doctors.html">Doctors</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="doctors.html">Doctors</a>
           <a href="#our-services">Services</a>
           <a href="#our-contact">Contact</a>
         </div>
@@ -346,9 +346,9 @@
         <div>
           <h3 class="footer-h3">Quick Links</h3>
           <div class="footer-links">
-            <a href="/index.html">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/doctors.html">Doctors</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="doctors.html">Doctors</a>
             <a href="#our-services">Services</a>
             <a href="#our-contact">Contact</a>
           </div>
